2008-04-28  David Hyatt  <hyatt@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=18780

        Canvas can't draw itself into its own buffer.  Make sure the dirtying call comes after the image()
        has been accessed.  Technically willDraw should be renamed to didDraw and all calls should be moved
        to after draws have occurred (since if the draw op itself wants to reference the image it shouldn't get
        a dirty copy either), but I'll take that up with olliej when he wakes up. :)

        Reviewed by Dan Bernstein

        Added fast/canvas/canvasDrawsIntoSelf.html

        * html/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::drawImage):

2008-04-28  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Geoff Garen.

        <rdar://problem/5825192> Replace use of Gestalt with BSD sysctl

        * platform/graphics/mac/MediaPlayerPrivateQTKit.mm:
        (WebCore::MediaPlayerPrivate::isAvailable): There is no need to check QuickTime version post-Tiger,
        as it will never be below 7.3 again. This change may make library loading happen earlier in
        some cases, hopefully, that's not a big deal.

2008-04-25  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin.

        Fix run-webkit-tests --threading
        and provisionally fix <https://bugs.webkit.org/show_bug.cgi?id=18661>
        Proxy server issue in Sunday's Nightly

        Adjusted for JavaScriptCore changes: added a new member to ClassInfo objects, turned
        ClassInfo::propHashTable into a function, made getPropertyAttributes() take an ExecState pointer.

        * bindings/js/JSAudioConstructor.cpp:
        (WebCore::):
        * bindings/js/JSDOMWindowBase.cpp:
        (WebCore::):
        * bindings/js/JSDOMWindowCustom.cpp:
        (WebCore::JSDOMWindow::customGetOwnPropertySlot):
        * bindings/js/JSDOMWindowWrapper.cpp:
        (WebCore::):
        (WebCore::JSDOMWindowWrapper::getPropertyAttributes):