@@ -1,3 +1,12 @@
+2008-04-28  Adam Roben  <aroben@apple.com>
+
+        Fix some Windows build errors in FontPlatfomrData
+
+        * platform/graphics/win/FontPlatformData.h: Removed the Deleted
+        constructor and replaced it with a HashTableDeletedValueType
+        constructor. Also added isHashTableDeletedValue() and
+        hashTableDeletedFontValue().
+
 2008-04-28  David Hyatt  <hyatt@apple.com>
 
         https://bugs.webkit.org/show_bug.cgi?id=18780
